# Backend/api/accompany.go
@@ -7,19 +7,20 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
 )
 
 // Create
 type CreateAccompanyRequest struct {
-	UserID        int32  `json:"user_id" binding:"required"`
-	Era           int32  `json:"era" binding:"numeric"`
-	City          string `json:"city" binding:"required"`
-	Gender        string `json:"gender" binding:"required"`
-	Speaklanguage string `json:"speak_language"`
-	FindType      string `json:"find_type" binding:"required"`
-	FindTarget    string `json:"find_target" binding:"required"`
-	Sociability   string `json:"sociability"`
-	Certification bool   `json:"certification"`
+	SessionID     uuid.UUID `json:"session_id" binding:"required"`
+	Era           int32     `json:"era" binding:"numeric"`
+	City          string    `json:"city" binding:"required"`
+	Gender        string    `json:"gender" binding:"required"`
+	Speaklanguage string    `json:"speak_language"`
+	FindType      string    `json:"find_type" binding:"required"`
+	FindTarget    string    `json:"find_target" binding:"required"`
+	Sociability   string    `json:"sociability"`
+	Certification bool      `json:"certification"`
 }
 
 func (server *Server) CreateAccompany(ctx *gin.Context) {
@@ -28,8 +29,21 @@ func (server *Server) CreateAccompany(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, errorResponse(err))
 		return
 	}
+
+	token, err := server.store.GetSession(ctx, req.SessionID)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	_, err = server.tokenMaker.VerifyToken(token.AccessToken)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
 	Ac := info.CreateAccompanyRequestParams{
-		UserID:        req.UserID,
+		UserID:        token.UserID,
 		Era:           req.Era,
 		City:          req.City,
 		Gender:        req.Gender,
@@ -54,7 +68,7 @@ func (server *Server) CreateAccompany(ctx *gin.Context) {
 
 // Get
 type GetAccompanyRequest struct {
-	UserID int32 `json:"user_id" binding:"required"`
+	SessionID uuid.UUID `json:"session_id" binding:"required"`
 }
 
 func (server *Server) GetAccompany(ctx *gin.Context) {
@@ -63,7 +77,20 @@ func (server *Server) GetAccompany(ctx *gin.Context) {
 		ctx.JSON(http.StatusBadRequest, errorResponse(err))
 		return
 	}
-	GetAccompany, err := server.store.GetUserAccompany(ctx, req.UserID)
+
+	token, err := server.store.GetSession(ctx, req.SessionID)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	_, err = server.tokenMaker.VerifyToken(token.AccessToken)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	GetAccompany, err := server.store.GetUserAccompany(ctx, token.UserID)
 	if err != nil {
 		errCode := db.ErrorCode(err)
 		if errCode == db.ForeignKeyViolation || errCode == db.UniqueViolation {
@@ -92,25 +119,38 @@ func (server *Server) ShowListAccompany(ctx *gin.Context) {
 
 // Update
 type UpdateAccompanyRequest struct {
-	UserID        int32  `json:"user_id" binding:"required"`
-	Era           int32  `json:"era" binding:"numeric"`
-	City          string `json:"city" binding:"required"`
-	Gender        string `json:"gender" binding:"required"`
-	Speaklanguage string `json:"speaklanguage"`
-	FindType      string `json:"find_type" binding:"required"`
-	FindTarget    string `json:"find_target" binding:"required"`
-	Sociability   string `json:"sociability"`
-	Certification bool   `json:"certification"`
+	SessionID     uuid.UUID `json:"session_id" binding:"required"`
+	Era           int32     `json:"era" binding:"numeric"`
+	City          string    `json:"city" binding:"required"`
+	Gender        string    `json:"gender" binding:"required"`
+	Speaklanguage string    `json:"speaklanguage"`
+	FindType      string    `json:"find_type" binding:"required"`
+	FindTarget    string    `json:"find_target" binding:"required"`
+	Sociability   string    `json:"sociability"`
+	Certification bool      `json:"certification"`
 }
 
 func (server *Server) UpdateAccompany(ctx *gin.Context) {
-	var req UpdateHobbyRequest
+	var req UpdateAccompanyRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		ctx.JSON(http.StatusBadRequest, errorResponse(err))
 		return
 	}
+
+	token, err := server.store.GetSession(ctx, req.SessionID)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	_, err = server.tokenMaker.VerifyToken(token.AccessToken)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
 	Ac := info.UpdateUserAccompanyParams{
-		UserID:        req.UserID,
+		UserID:        token.UserID,
 		Era:           req.Era,
 		City:          req.City,
 		Gender:        req.Gender,
