# Backend/doc/swagger/Backend.swagger.json
@@ -369,11 +369,10 @@
         },
         "parameters": [
           {
-            "name": "UserID",
+            "name": "SessionID",
             "in": "query",
             "required": false,
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           }
         ],
         "tags": [
@@ -400,11 +399,10 @@
         },
         "parameters": [
           {
-            "name": "UserID",
+            "name": "SessionID",
             "in": "query",
             "required": false,
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           }
         ],
         "tags": [
@@ -431,11 +429,10 @@
         },
         "parameters": [
           {
-            "name": "UserID",
+            "name": "SessionID",
             "in": "query",
             "required": false,
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           }
         ],
         "tags": [
@@ -461,6 +458,12 @@
           }
         },
         "parameters": [
+          {
+            "name": "SessionID",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
           {
             "name": "CpID",
             "in": "query",
@@ -493,11 +496,10 @@
         },
         "parameters": [
           {
-            "name": "UserID",
+            "name": "SessionID",
             "in": "query",
             "required": false,
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           }
         ],
         "tags": [
@@ -555,11 +557,10 @@
         },
         "parameters": [
           {
-            "name": "UserID",
+            "name": "SessionID",
             "in": "query",
             "required": false,
-            "type": "integer",
-            "format": "int32"
+            "type": "string"
           }
         ],
         "tags": [
@@ -1129,9 +1130,8 @@
     "pbCreateAccompanyRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "Era": {
           "type": "integer",
@@ -1158,7 +1158,8 @@
         "Certification": {
           "type": "boolean"
         }
-      }
+      },
+      "title": "Create"
     },
     "pbCreateAccompanyResponse": {
       "type": "object",
@@ -1171,9 +1172,8 @@
     "pbCreateCanChangeRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "NickName": {
           "type": "string"
@@ -1214,7 +1214,8 @@
         "Introduce": {
           "type": "string"
         }
-      }
+      },
+      "title": "Create"
     },
     "pbCreateCanChangeResponse": {
       "type": "object",
@@ -1227,9 +1228,8 @@
     "pbCreateChangeTargetRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "ChangeUserID": {
           "type": "integer",
@@ -1238,7 +1238,8 @@
         "Reason": {
           "type": "string"
         }
-      }
+      },
+      "title": "Create"
     },
     "pbCreateChangeTargetResponse": {
       "type": "object",
@@ -1251,9 +1252,8 @@
     "pbCreateComplaintRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "CpTargetID": {
           "type": "integer",
@@ -1265,7 +1265,8 @@
         "CpMessage": {
           "type": "string"
         }
-      }
+      },
+      "title": "Create"
     },
     "pbCreateComplaintResponse": {
       "type": "object",
@@ -1304,19 +1305,12 @@
         "SessionsID": {
           "type": "string"
         },
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
-        },
         "Email": {
           "type": "string"
         },
         "CreateAt": {
           "type": "string",
           "format": "date-time"
-        },
-        "AccessToken": {
-          "type": "string"
         },
         "AccessTokenExpiresAt": {
           "type": "string",
@@ -1327,9 +1321,8 @@
     "pbCreateHobbyRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "Era": {
           "type": "integer",
@@ -1368,7 +1361,8 @@
         "Certification": {
           "type": "boolean"
         }
-      }
+      },
+      "title": "Create"
     },
     "pbCreateHobbyResponse": {
       "type": "object",
@@ -1403,7 +1397,8 @@
         "Img5": {
           "type": "string"
         }
-      }
+      },
+      "title": "Create"
     },
     "pbCreateImagesResponse": {
       "type": "object",
@@ -1416,9 +1411,8 @@
     "pbCreateLoverRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "MinAge": {
           "type": "integer",
@@ -1467,7 +1461,8 @@
         "Certification": {
           "type": "boolean"
         }
-      }
+      },
+      "title": "Create"
     },
     "pbCreateLoverResponse": {
       "type": "object",
@@ -1496,7 +1491,8 @@
           "type": "integer",
           "format": "int32"
         }
-      }
+      },
+      "title": "Create"
     },
     "pbCreateTargetListResponse": {
       "type": "object",
@@ -1650,9 +1646,8 @@
     "pbInputPasswordRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "Password": {
           "type": "string"
@@ -1688,18 +1683,7 @@
         "SessionsID": {
           "type": "string"
         },
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
-        },
         "Email": {
-          "type": "string"
-        },
-        "CreateAt": {
-          "type": "string",
-          "format": "date-time"
-        },
-        "AccessToken": {
           "type": "string"
         },
         "AccessTokenExpiresAt": {
@@ -1828,9 +1812,8 @@
     "pbUpdateAccompanyRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "Era": {
           "type": "integer",
@@ -1857,7 +1840,8 @@
         "Certification": {
           "type": "boolean"
         }
-      }
+      },
+      "title": "Update"
     },
     "pbUpdateAccompanyResponse": {
       "type": "object",
@@ -1870,9 +1854,8 @@
     "pbUpdateCanChangeRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "NickName": {
           "type": "string"
@@ -1913,7 +1896,8 @@
         "Introduce": {
           "type": "string"
         }
-      }
+      },
+      "title": "Update"
     },
     "pbUpdateCanChangeResponse": {
       "type": "object",
@@ -1926,6 +1910,9 @@
     "pbUpdateComplaintRequest": {
       "type": "object",
       "properties": {
+        "SessionID": {
+          "type": "string"
+        },
         "CpID": {
           "type": "integer",
           "format": "int32"
@@ -1933,7 +1920,8 @@
         "Status": {
           "type": "string"
         }
-      }
+      },
+      "title": "Update"
     },
     "pbUpdateComplaintResponse": {
       "type": "object",
@@ -1946,9 +1934,8 @@
     "pbUpdateHobbyRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "Era": {
           "type": "integer",
@@ -1987,7 +1974,8 @@
         "Certification": {
           "type": "boolean"
         }
-      }
+      },
+      "title": "Update"
     },
     "pbUpdateHobbyResponse": {
       "type": "object",
@@ -2022,7 +2010,8 @@
         "Img5": {
           "type": "string"
         }
-      }
+      },
+      "title": "Updat"
     },
     "pbUpdateImagesResponse": {
       "type": "object",
@@ -2035,9 +2024,8 @@
     "pbUpdateLoverRequest": {
       "type": "object",
       "properties": {
-        "UserID": {
-          "type": "integer",
-          "format": "int32"
+        "SessionID": {
+          "type": "string"
         },
         "MinAge": {
           "type": "integer",
@@ -2086,7 +2074,8 @@
         "Certification": {
           "type": "boolean"
         }
-      }
+      },
+      "title": "Update"
     },
     "pbUpdateLoverResponse": {
       "type": "object",
@@ -2115,7 +2104,8 @@
           "type": "integer",
           "format": "int32"
         }
-      }
+      },
+      "title": "Update"
     },
     "pbUpdateTargetListResponse": {
       "type": "object",
